[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "my-toolbox"
version = "1.0.0"
description = "Project description"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "John Doe", email = "johndoe@gmail.com"}]

dependencies = [
  "tomli"
]

[project.optional-dependencies]
ci = ["black", "coverage", "pylint", "flake8"]
cd = ["twine"]

[project.scripts]
guayaba = "common.guayaba:main"

[tool.black]
line-length = 79
use-tabs = false
tab-width = 2
